--- a/source/index.haml
+++ b/source/index.haml
@@ -2,6 +2,60 @@
 layout: default
 ---
 
+.container
+  %header
+    %h1.brand
+      Заголовок
+
+
+.comments
+  .comment
+    .comment-image
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
+    .comment-content
+      %h1
+        First Comment Title or Author
+      %p
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.
+      %p.comment-detail
+        Date or details about this post
+  
+  .comment
+    .comment-image
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png" alt="Logo image">
+    .comment-content
+      %h1
+        Another One
+      %p
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.
+      %p.comment-detail
+        Date or details about this post
+
+.cards
+  .card
+    .card-image
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png" alt="">
+    .card-header
+      First Card
+    .card-copy
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+ 
+  .card
+    .card-image
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png" alt="">
+    .card-header
+      First Card
+    .card-copy
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+
+  .card
+    .card-image
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png" alt="">
+    .card-header
+      First Card
+    .card-copy
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+
 .delete-me
   .container
     %h1 Proteus
