--- a/source/_assets/stylesheets/_global.sass
+++ b/source/_assets/stylesheets/_global.sass
@@ -1,10 +1,15 @@
 @import cards
 @import header
+@import idea
 @import comment
+@import footer
 
 .comments, .cards
   //max-width: 560px
   @include outer-container
+
+.comments
+  padding: 0 10rem
 
 //body
 //  background-color: $light-gray
